# omg-hal

./: Cargo.toml  README.md
cli-jpeg-encode/: Cargo.toml
cli-jpeg-encode/src/: main.rs
jpeg/: Cargo.toml
jpeg/src/: lib.rs
m4u/: Cargo.toml
m4u/src/: error.rs  ioctl.rs  lib.rs  mva.rs  port.rs  sync_mode.rs
